# RType

./: CMakeLists.txt  Doxyfile  README.md  config.txt  exe.sh  map1.txt  map2.txt  map3.txt
bonus/website_documentation/: contact.html  diagramme.html  documentation.html  index.html
cmake_modules/: Findboost.cmake  Findraylib.cmake
doc/doxy/: default_doxy.cpp  default_header_doxy.hpp
doc/html/: _client_8hpp.html  _client_8hpp.js  _client_8hpp_source.html  _client_internal_logic_8cpp.html  _client_internal_logic_8hpp.html  _client_internal_logic_8hpp.js  _client_internal_logic_8hpp_source.html  _entity_8cpp.html  _entity_8hpp.html  _entity_8hpp_source.html  _frame_system_8hpp.html  _frame_system_8hpp.js  _frame_system_8hpp_source.html  _game_8cpp.html  _game_8hpp.html  _game_8hpp_source.html  _lobby_8cpp.html  _lobby_8hpp.html  _lobby_8hpp.js  _lobby_8hpp_source.html  _macro_8hpp.html  _macro_8hpp.js  _macro_8hpp_source.html  _menu_8cpp.html  _menu_8hpp.html  _menu_8hpp.js  _menu_8hpp_source.html  _r_e_a_d_m_e_8md.html  _room_8cpp.html  _room_8hpp.html  _room_8hpp.js  _room_8hpp_source.html  _server_8cpp.html  _server_8cpp.js  _server_8hpp.html  _server_8hpp.js  _server_8hpp_source.html  _server_internal_logic_8cpp.html  _server_internal_logic_8hpp.html  _server_internal_logic_8hpp.js  (+195 more)
doc/latex/: _client_8hpp.tex  _client_8hpp_source.tex  _client_internal_logic_8cpp.tex  _client_internal_logic_8hpp.tex  _client_internal_logic_8hpp_source.tex  _entity_8cpp.tex  _entity_8hpp.tex  _entity_8hpp_source.tex  _frame_system_8hpp.tex  _frame_system_8hpp_source.tex  _game_8cpp.tex  _game_8hpp.tex  _game_8hpp_source.tex  _lobby_8cpp.tex  _lobby_8hpp.tex  _lobby_8hpp_source.tex  _macro_8hpp.tex  _macro_8hpp_source.tex  _menu_8cpp.tex  _menu_8hpp.tex  _menu_8hpp_source.tex  _room_8cpp.tex  _room_8hpp.tex  _room_8hpp_source.tex  _server_8cpp.tex  _server_8hpp.tex  _server_8hpp_source.tex  _server_internal_logic_8cpp.tex  _server_internal_logic_8hpp.tex  _server_internal_logic_8hpp_source.tex  _system_8cpp.tex  _system_8hpp.tex  _system_8hpp_source.tex  annotated.tex  class_client.tex  class_client_internal_logic.tex  class_frame_system.tex  class_game.tex  class_lobby___client.tex  class_lobby___serv.tex  (+61 more)
include/client/: Client.hpp  ClientInternalLogic.hpp
include/game/: Entity.hpp  FrameSystem.hpp  Lobby.hpp  Macro.hpp  Menu.hpp  c_Entity.hpp  fire.hpp
include/server/: Room.hpp  Server.hpp  ServerInternalLogic.hpp  System.hpp  networking_server.hpp  serialize.hpp
src/client/: ClientInternalLogic.cpp  main.cpp
(+93 files in other folders)
